test(rpc): use assertInstanceOf() and getFirst() for Failure case [REVIEW9-8.1]
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>